--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -10,22 +10,13 @@
   </div>
   <div class="row row-cols-3 d-flex justify-content-between">
     <% @lists.each do |list| %>
-    <div data-aos="fade-up"
-         data-aos-offset="2"
-         data-aos-delay="5"
-         data-aos-duration="1000"
-         data-aos-easing="ease-in-out"
-         data-aos-mirror="true"
-         data-aos-once="false"
-         data-aos-anchor-placement="top-center">
       <% link_to "link", list_path(list) %>
         <div class="col mb-4">
-          <a class="pic-link" href="<%= list_path(list) %>"><div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1578849278619-e73505e9610f?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8cG9wY29ybnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60)">
+          <a class="pic-link" href="<%= list_path(list) %>"><div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1585647347483-22b66260dfff?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
             <p><%= list.name %></p>
             <!-- <p><%= link_to "link", list_path(list) %></p> -->
           </div></a>
         </div>
-    </div>
     <% end %>
   </div>
 </div>
