--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -10,12 +10,21 @@
   </div>
   <div class="row row-cols-3 d-flex justify-content-between">
     <% @lists.each do |list| %>
+        <% image = list.photo.attached? ? list.photo.key : "../popcorn.jpeg" %>
         <div class="col mb-4">
-          <a class="pic-link" href="<%= list_path(list) %>"><div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://images.unsplash.com/photo-1585647347483-22b66260dfff?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)">
+          <a class="pic-link" href="<%= list_path(list) %>"><div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path image %>')">
             <p><%= list.name %></p>
-            <!-- <p><%= link_to "link", list_path(list) %></p> -->
           </div></a>
         </div>
     <% end %>
   </div>
 </div>
+<h1 class="form-text">create a new list</h1>
+<div class="container form">
+  <%= simple_form_for(@list) do |f| %>
+    <%= f.input :name %>
+    <%= f.input :photo, as: :file %>
+    <%= f.submit %>
+  <% end %>
+</div>
+
