--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,6 +2,7 @@
   background-size: cover;
   background-position: center;
   padding: 150px 0;
+  height: 420px;
 
   h1 {
     margin: 0;
@@ -10,6 +11,13 @@
     font-size: 64px;
     font-weight: bold;
   }
+
+  .form-text {
+      margin-top: 64px;
+      text-align: center;
+      color: white;
+      font-size: 40px;
+    }
 
   p {
     font-size: 32px;
@@ -22,3 +30,4 @@
 
   }
 }
+
