--- a/app/views/components/_banner.html.erb
+++ b/app/views/components/_banner.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('images/popcorn.jpeg');">
+<div class="banner d-flex justify-space-between" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1580712941584-760d19f1c187?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2689&q=80);">
   <div class="container">
     <div class="title">
       <h1>🍿 Popcorn list!</h1>
@@ -6,5 +6,15 @@
     <p>
       <span id="banner-typed-text"></span>
     </p>
+  </div>
+  <div class="form_list_box">
+    <h1 class="form-text">create a new list</h1>
+    <div class="container form">
+      <%= simple_form_for(@list) do |f| %>
+        <%= f.input :name %>
+        <%= f.input :photo, as: :file %>
+        <%= f.submit %>
+      <% end %>
+    </div>
   </div>
 </div>
